# polybuild_v3

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  LICENSE  POLYBUILD_v3_round5_audit.md  POLYBUILD_v3_round5_audit_FULL.md  POLYBUILD_v3_round6_audit.md  POLYBUILD_v3_round6_audit_FULL.md  POLYBUILD_v3_round7_audit.md  POLYBUILD_v3_round7_audit_FULL.md  POLYBUILD_v3_round8_audit.md  POLYBUILD_v3_round8_audit_FULL.md  POLYBUILD_v3_round9_audit.md  POLYBUILD_v3_round9_audit_FULL.md  POLYBUILD_v3_spec.md  POLYLENS_post_sprint_findings.md  POLYLENS_round10_7_VALIDATION.md  POLYLENS_round10_7_codex_validation.json  POLYLENS_round10_PREMORTEM.md  POLYLENS_v3_findings.md  POLYLENS_v3_grok_F_G.md  POLYLENS_v3_kimi_D_E.md  POLYLENS_v3_qwen_B_C.md  README.md  build_audit_md_round9.py  pyproject.toml
.github/workflows/: ci.yml
config/: concurrency_limits.yaml  model_dimensions.yaml  models.yaml  routing.yaml  timeouts.yaml
docs/: HANDOFF.md  RUNBOOK_PRODUCTION.md  session_handoff.json
docs/adr/: ADR-001-m2-devcode-integration.md
docs/polylens_round_10_8_post_sprint/: codex_audit.json  gemini_audit.json  grok_audit.json  qwen_audit.json
prompts/: adr.md  builder_unified.md  critic.md  fixer.md  opus_spec.md  spec_attack.md  verifier_strict.md
scripts/: bench_strategy_overhead.py  deploy_staging.sh  install_audit_hook.sh
skills/polybuild/: SKILL.md
src/polybuild/: __init__.py  _version.py  cli.py  models.py
src/polybuild/adapters/: __init__.py  _json_extract.py  builder_protocol.py  claude_code.py  codex_cli.py  gemini_cli.py  kimi_cli.py  mistral_eu.py  ollama_local.py  openrouter.py
src/polybuild/audit/: __init__.py  _atomic_io.py  backlog.py  cache.py  cli.py  cost_log.py  notifier.py  queue.py  rotation.py  runner.py
src/polybuild/concurrency/: __init__.py  limiter.py
src/polybuild/domain_gates/: __init__.py  validate_fts5.py  validate_mcp.py  validate_qdrant.py  validate_rag.py  validate_sqlite.py
src/polybuild/orchestrator/: __init__.py  consensus_pipeline.py  phase_3_score.py  pipeline_strategy.py  solo_pipeline.py
src/polybuild/phases/: __init__.py  phase_0_spec.py  phase_1_select.py  phase_2_generate.py  phase_3_score.py  phase_3b_grounding.py  phase_4_audit.py  phase_5_triade.py  phase_6_validate.py  phase_7_commit.py  phase_8_prod_smoke.py  phase_minus_one_privacy.py
src/polybuild/scoring/: __init__.py  devcode_adapter.py  devcode_scorer.py  naive_scorer.py  protocol.py  shadow_scorer.py
src/polybuild/security/: __init__.py  prompt_sanitizer.py  safe_write.py  secrets_loader.py
tests/: conftest.py
tests/integration/: test_m2_audit_hook.py  test_m2_devcode_scorer.py  test_m2_solo_mode.py
tests/regression/: test_claude_cli_v2_compat.py  test_cli_file_write_parsing.py  test_p0_bugs.py  test_phase_3_score_nonzero.py  test_polylens_v3_patches.py  test_round10_1_audit_patches.py  test_round10_2_audit_patches.py  test_round10_3_audit_patches.py  test_round10_4_audit_patches.py  test_round10_6_audit_patches.py  test_round10_7_audit_patches.py  test_round10_8_audit_patches.py  test_round10_polylens_patches.py
tests/unit/: test_adapters_factory.py  test_adapters_prompts.py  test_domain_gates_fts5.py  test_domain_gates_mcp.py  test_orchestrator.py  test_phase_1_select.py  test_phase_3_score.py  test_phase_5_triade.py  test_phase_minus_one_privacy.py  test_smoke_imports.py
